app/styles/main.scss
$icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
// bower:scss
@import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
@import "font-awesome/scss/font-awesome.scss";
// endbower
@import url(https://fonts.googleapis.com/css?family=Cabin+Condensed);
@import "home.scss";
@import "about.scss";
@import "ihtsdo.scss";
@import "fonts.scss";
@import "edit.scss";
@import "compact.scss";
@import "editpanel.scss";
@import "light.scss";
@import "dark.scss";
@import "feedback.scss";
@import "glphicons.scss";
@import "grid.scss";
@import "globals.scss";
@import "models.scss";
@import "tables.scss";
@import "ta.scss";
@import "tooltips.scss";
.browsehappy {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

body {
  padding: 0; margin: 0;
  position: absolute;
  width: 100%;
  height: 100%;
}
html{ height: 100%;}

/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.marketing,
.footer {
  padding-left: 15px;
  padding-right: 15px;
}

/* Custom page header */
.header {
  border-bottom: 1px solid #e5e5e5;
  margin-bottom: 10px;

  /* Make the masthead heading the same height as the navigation */
  h3 {
    margin-top: 0;
    margin-bottom: 0;
    line-height: 40px;
    padding-bottom: 19px;
  }
}

/* Custom page footer */
.footer {
  padding-top: 19px;
  color: #777;
  border-top: 1px solid #e5e5e5;
}

.container-narrow > hr {
  margin: 30px 0;
}

/* Main marketing message and sign up button */
.jumbotron {
  text-align: center;
  border-bottom: 1px solid #e5e5e5;

  .btn {
    font-size: 21px;
    padding: 14px 24px;
  }
}

/* Supporting marketing content */
.marketing {
  margin: 40px 0;

  p + h4 {
    margin-top: 28px;
  }
}

.navbar-default {
  background-color: #303030;
  border: none;
  border-radius: 0px;
  text-shadow: none;
  font-family: 'museo300', sans-serif;
  .navbar-brand {
    color: #fff;
  }
  .navbar-toggle {
    background-color: #303030;
    .icon-bar {
      background-color: #888;
    }
  }
}

.navbar-brand {
  float: left;
  height: 50px;
  padding: 5px;
  font-size: 14px;
  line-height: 32px;
  span {
    float: left;
  }
  .navbar-version {
    padding: 5px 10px;
    font-size: 14px;
    line-height: 32px;
  }
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
  .container {
    max-width: 730px;
  }

  /* Remove the padding we set earlier */
  .header,
  .marketing,
  .footer {
    padding-left: 0;
    padding-right: 0;
  }
  /* Space out the masthead */
  .header {
    margin-bottom: 30px;
  }
  /* Remove the bottom border on the jumbotron for visual effect */
  .jumbotron {
    border-bottom: 0;
  }

}

/* Added by PWG to work around fixed sidebar */
.sca-container {
  position:absolute;
  top:64px;
  bottom:0px;
  width:100%;
  height:100%;
}

.sca-column {
  position: relative;
  height:100%;
  overflow-y:scroll;
  margin-bottom:32px;
}

.navbar-fixed-bottom {
  min-height: 32px;
}

